--- a/package.json
+++ b/package.json
@@ -2,26 +2,45 @@
   "name": "nzhousingstats",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
+    "dev-turbo": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test-api": "node scripts/test-api.js",
+    "db:generate": "drizzle-kit generate --config=drizzle.config.js",
+    "db:migrate": "drizzle-kit migrate --config=drizzle.config.js",
+    "db:studio": "drizzle-kit studio --config=drizzle.config.js",
+    "collect-data": "node scripts/collect-data.js",
+    "test-collection": "tsx scripts/test-data-collection.js",
+    "data-job": "tsx scripts/data-collection-job.js",
+    "data-job-prod": "node --loader tsx/esm scripts/data-collection-job.js"
   },
   "dependencies": {
+    "@libsql/client": "^0.15.10",
+    "crypto-js": "^4.2.0",
+    "dotenv": "17.2.1",
+    "drizzle-orm": "^0.44.4",
+    "next": "15.4.4",
+    "node-cron": "^4.2.1",
+    "oauth-1.0a": "^2.2.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.4.4"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "tsx": "^4.20.3",
+    "typescript": "^5"
   }
 }
