--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "collect-data": "node scripts/collect-data.js",
     "test-collection": "tsx scripts/test-data-collection.js",
     "data-job": "tsx scripts/data-collection-job.js",
-    "data-job-prod": "node --loader tsx/esm scripts/data-collection-job.js"
+    "data-job-prod": "node --import tsx/esm scripts/data-collection-job.js"
   },
   "dependencies": {
     "@libsql/client": "^0.15.10",
@@ -27,7 +27,8 @@
     "node-cron": "^4.2.1",
     "oauth-1.0a": "^2.2.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "recharts": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
