--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# deployment and server configuration
+ecosystem.config.cjs
+deploy.sh
+*.config.cjs
