--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "oauth-1.0a": "^2.2.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "recharts": "^3.1.0"
+    "recharts": "^3.1.0",
+    "sass": "^1.89.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
